--- a/index.html
+++ b/index.html
@@ -82,6 +82,6 @@
 <hr>
 <a href="Hobbies.html">My hobbies</a>
 <br>
-<a href="Contact.html">Contact me</a>
+<a href="contact.html">Contact me</a>
 
 </html>
