--- a/contact.html
+++ b/contact.html
@@ -14,11 +14,11 @@
     <hr />
     <form action="mailto:vaibhavsonawne2320@gmail.com" method="post" enctype="text/plain">    <!--This is for form creating -->
       <label>Your name:</label>  <!--This is for describing what we put-->
-      <input type="text" name="" id="Your name" />   <!--This is for inputing the value--><br />
+      <input type="text" name="" id="Name" />   <!--This is for inputing the value--><br />
       <label>Your mail:</label>
-      <input type="email" name="Your mail" id=""/><br />
+      <input type="email" name="Mail" id=""/><br />
       <label>Your message:</label><br>
-      <textarea name="name" rows="10" cols="30"></textarea><br>
+      <textarea name="message" rows="10" cols="30"></textarea><br>
       <input type="submit" name="">
     </form>
   </body>
