--- a/contact.html
+++ b/contact.html
@@ -13,11 +13,11 @@
     <p>Address:Sinnar,nashik</p>
     <hr />
     <form action="mailto:vaibhavsonawne2320@gmail.com" method="post" enctype="text/plain">    <!--This is for form creating -->
-      <label>Your name:</label>  <!--This is for describing what we put-->
+      <label>Name:</label>  <!--This is for describing what we put-->
       <input type="text" name="" id="Name" />   <!--This is for inputing the value--><br />
-      <label>Your mail:</label>
+      <label>Mail:</label>
       <input type="email" name="Mail" id=""/><br />
-      <label>Your message:</label><br>
+      <label>Mssage:</label><br>
       <textarea name="message" rows="10" cols="30"></textarea><br>
       <input type="submit" name="">
     </form>
