--- a/contact.html
+++ b/contact.html
@@ -14,9 +14,9 @@
     <hr />
     <form action="mailto:vaibhavsonawne2320@gmail.com" method="post" enctype="text/plain">    <!--This is for form creating -->
       <label>Name:</label>  <!--This is for describing what we put-->
-      <input type="text" name="" id="Name" />   <!--This is for inputing the value--><br />
+      <input type="text" name="" id="" />   <!--This is for inputing the value--><br />
       <label>Mail:</label>
-      <input type="email" name="Mail" id=""/><br />
+      <input type="email" name="" id=""/><br />
       <label>Mssage:</label><br>
       <textarea name="message" rows="10" cols="30"></textarea><br>
       <input type="submit" name="">
